--- a/nodepop/views/header.ejs
+++ b/nodepop/views/header.ejs
@@ -24,12 +24,18 @@
                 <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
+                <% if (session.userId) { %>
                 <li class="nav-item">
                 <a class="nav-link" href="#">New product</a>
                 </li>
+                <% } %>
             </ul>
             <form class="d-flex" role="search">
-                <a href="/login" class="btn btn-outline-success" type="submit">Login</a>
+                <% if (session.userId) { %>
+                    <a href="/logout" class="btn btn-outline-success" type="submit">Logout</a>
+                    <% } else { %>
+                    <a href="/login" class="btn btn-outline-success" type="submit">Login</a>
+                <% } %>
             </form>
         </div>
         </div>
