feat: declaro ruta del link new product

--- a/nodepop/views/header.ejs
+++ b/nodepop/views/header.ejs
@@ -26,7 +26,7 @@
                 </li>
                 <% if (session.userId) { %>
                 <li class="nav-item">
-                <a class="nav-link" href="#">New product</a>
+                <a class="nav-link" href="/products/new">New product</a>
                 </li>
                 <% } %>
             </ul>
