fix: modifico typo de campo en tags

--- a/nodepop/views/new-product.ejs
+++ b/nodepop/views/new-product.ejs
@@ -8,7 +8,7 @@
     </div>
     
     <div class="mb-3">
-        <label for="productPrice" class="form-label">Price</label>
+        <label for="productPrice" class="form-label">Price u$s</label>
         <input type="number" name="price" class="form-control" id="productPrice">
     </div>
 
@@ -19,7 +19,7 @@
 
     <div class="mb-3">
         <label for="productTags" class="form-label">Tags</label>
-        <input type="number" name="tags" class="form-control" id="productTags">
+        <input type="text" name="tags" class="form-control" id="productTags">
     </div>
     
     <button type="submit" class="btn btn-primary">Save</button>
