feat: agrego step al input de price

--- a/nodepop/views/new-product.ejs
+++ b/nodepop/views/new-product.ejs
@@ -9,7 +9,7 @@
     
     <div class="mb-3">
         <label for="productPrice" class="form-label">Price u$s</label>
-        <input type="number" name="price" class="form-control" id="productPrice">
+        <input type="number" name="price" class="form-control" id="productPrice" step="0.01">
     </div>
 
     <div class="mb-3">
