--- a/nodepop/views/new-product.ejs
+++ b/nodepop/views/new-product.ejs
@@ -4,12 +4,12 @@
 <form method="POST">
     <div class="mb-3">
         <label for="productName" class="form-label">Name</label>
-        <input type="text" name="name" class="form-control" id="productName" aria-describedby="nameHelp">
+        <input type="text" name="name" class="form-control" id="productName" aria-describedby="nameHelp" required>
     </div>
     
     <div class="mb-3">
         <label for="productPrice" class="form-label">Price u$s</label>
-        <input type="number" name="price" class="form-control" id="productPrice" step="0.01">
+        <input type="number" name="price" class="form-control" id="productPrice" step="0.01" required title="Format (20.99)" placeholder="20.99">
     </div>
 
     <div class="mb-3">
@@ -19,7 +19,7 @@
 
     <div class="mb-3">
         <label for="productTags" class="form-label">Tags</label>
-        <input type="text" name="tags" class="form-control" id="productTags">
+        <input type="text" name="tags" class="form-control" id="productTags" required title="Format (#Hashtag1, #Hashtag2)" placeholder="#Hashtag1, #Hashtag2">
     </div>
     
     <button type="submit" class="btn btn-primary">Save</button>
